Mostly Working Editor
Have a basically functional crossword and clue editor up and running.
Lots to do still…

--- a/qml.qrc
+++ b/qml.qrc
@@ -3,5 +3,7 @@
         <file>main.qml</file>
         <file>MainForm.ui.qml</file>
         <file>Utils.js</file>
+        <file>NewXWordWindow.qml</file>
+        <file>NewXWordWindowForm.ui.qml</file>
     </qresource>
 </RCC>
