CluesColumn Component Created
moved the clues editor columns into a component, and now just have two
custom types in the Clue Editor window’s flickable.

--- a/qml.qrc
+++ b/qml.qrc
@@ -3,5 +3,6 @@
         <file>main.qml</file>
         <file>MainForm.ui.qml</file>
         <file>Utils.js</file>
+        <file>CluesColumn.qml</file>
     </qresource>
 </RCC>
