StartUpWindow Component created
put the startUp window in its own component to clean up main.qml some
more.

--- a/qml.qrc
+++ b/qml.qrc
@@ -4,5 +4,6 @@
         <file>MainForm.ui.qml</file>
         <file>Utils.js</file>
         <file>CluesColumn.qml</file>
+        <file>StartUpWindow.qml</file>
     </qresource>
 </RCC>
