--- a/qml.qrc
+++ b/qml.qrc
@@ -5,5 +5,6 @@
         <file>Utils.js</file>
         <file>CluesColumn.qml</file>
         <file>StartUpWindow.qml</file>
+        <file>Square.qml</file>
     </qresource>
 </RCC>
