added metadata window
Includes options for the crossword’s author, title, and date. Includes
saving/loading functionality. Also made it so that the crossword title
is the main window’s title.

--- a/qml.qrc
+++ b/qml.qrc
@@ -6,5 +6,6 @@
         <file>CluesColumn.qml</file>
         <file>StartUpWindow.qml</file>
         <file>Square.qml</file>
+        <file>MetadataForm.qml</file>
     </qresource>
 </RCC>
